--- a/index.css
+++ b/index.css
@@ -1,73 +1,165 @@
-.clearfix::after {
-    content: '';
-    display: block;
-    clear: both;
-}
-
-body {
-  background: gray;
-    color: white;
-     margin: 0px;
-
-}
-
-a {
-    color: inherit;
-     text-decoration: none;
-}
-
-
-.topNavBar{
-
-  margin-top: 26px;
-  padding-left: 16px;
-  padding-right: 16px;
-}
-
-.topNavBar>nav>ul {
-    list-style: none;
+* {
     margin: 0px;
     padding: 0px;
 }
 
-.topNavBar>nav>ul>li {
-    float: left;
-    margin-left: 25px;
+li {
+    list-style: none;
 }
 
-.topNavBar>nav>ul>li>a {
-    font-weight: bold;
-    color: #3E4450;
+a {
     text-decoration: none;
-    font-size: 12px;
-    border-bottom: 3px solid transparent;
-    display: block;
-     border-top: 7px solid transparent;
-     
+    color: inherit;
 }
 
-.topNavBar>nav>ul>li>a:hover {
+.topNavBar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
 
-    border-bottom: 3px solid #e06567;
-
+.topNavBar-inner {
+    display: flex;
+    margin: 30px;
+    justify-content: space-between;
 }
 
 .topNavBar .logo {
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
 
-     font-size: 24px;
+.topNavBar .logo span:first-child {
+    color: #D96F6F;
+}
 
-      padding-bottom: 4px;
+.topNavBar .logo span:nth-child(2) {
+    color: #9A9DA1;
+}
+
+.topNavBar nav ul {
+    display: flex;
+    height: 100%;
+    align-items: center;
+}
+
+.topNavBar nav ul li {
+
+    font-size: 13px;
+    font-weight: bold;
+    margin-left: 37px;
+    color: #CCCBCC;
+    border-bottom: 3px solid transparent;
+}
+
+.topNavBar nav ul li:hover {
+    border-bottom: 3px solid #D96F6F;
+}
+
+main {
+    margin-top: -340px;
+}
+
+main .card-container {
+    display: flex;
+    justify-content: center;
+}
+
+main .card-container .card {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff;
+    border: 1px solid rgb(61, 68, 81);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+}
+
+main .card-container .card .img {
+    margin-right: 40px;
+}
+
+main .card-container .card .profile-container {
+    display: flex;
+    flex-grow: 0.4;
+    padding: 50px 40px;
+}
+
+main .profile ul li {
+    margin-top: 20px;
+}
+
+main .profile ul li:before {
+    font-weight: bold;
+}
+
+main .profile ul li:nth-child(1):before {
+    content: '年龄';
+    margin-right: 90px;
 
 }
-.topNavBar .logo  .rs{
 
-     margin-right: 4px;
-       color: #D96F6F;
+main .profile ul li:nth-child(2):before {
+    content: '地址';
+    margin-right: 90px;
 }
- 
 
- .topNavBar .logo .card{
-      color: #9A9DA1;
-    
- }
+main .profile ul li:nth-child(3):before {
+    content: '手机';
+    margin-right: 90px;
+}
+
+main .profile ul li:nth-child(4):before {
+    content: '邮箱';
+    margin-right: 90px;
+}
+
+main .profile ul li:nth-child(5):before {
+    content: '学历';
+    margin-right: 90px;
+}
+
+main .media {
+    text-align: center;
+}
+
+main .media ul {
+    display: flex;
+    justify-content: center;
+    background: #D96F6F;
+}
+
+main .media ul > li {
+    margin-left: 25px;
+    padding: 20px;
+    text-align: center;
+}
+
+main .media ul > li a {
+    background-color: transparent;
+    width: 45px;
+    display: inline-block;
+    border-radius: 50%;
+    padding: 5px 0px;
+}
+
+main .media ul > li a:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+main .media ul > li a i {
+    font-size: 30px;
+    color: #fff;
+}
+
+.banner {
+    background-image: url("./img/backgeound.jpg");
+    width: 100%;
+    height: 517px;
+    background-repeat: no-rsepeat;
+    background-position: center center;
+    background-size: cover;
+}
+
+.banner .mask {
+    height: 517px;
+    background-color: rgba(0, 0, 0, 0.8);
+}
