--- a/index.css
+++ b/index.css
@@ -2,7 +2,13 @@
     margin: 0px;
     padding: 0px;
 }
-
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
 li {
     list-style: none;
 }
@@ -145,7 +151,7 @@ main .media ul > li a:hover {
     background-color: rgba(0, 0, 0, 0.1);
 }
 
-main .media ul > li a i {
+main .media ul > li a svg {
     font-size: 30px;
     color: #fff;
 }
