--- a/index.css
+++ b/index.css
@@ -29,12 +29,28 @@ a {
     top: 0;
     left: 0;
     width: 100%;
+    color: #CCCBCC;
 }
+
+.topNavBar.sticky {
+
+    z-index: 1;
+    background: #fff;
+    color: black;
+    font-weight: bold;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+
+}
+
 
 .topNavBar-inner {
     display: flex;
     margin: 30px;
     justify-content: space-between;
+}
+
+.topNavBar.sticky .topNavBar-inner {
+    margin: 10px 30px;
 }
 
 .topNavBar .logo {
@@ -49,23 +65,69 @@ a {
     color: #9A9DA1;
 }
 
-.topNavBar nav ul {
+.topNavBar nav > ul {
     display: flex;
     height: 100%;
     align-items: center;
 }
 
-.topNavBar nav ul li {
-
+.topNavBar nav > ul > li {
+    position: relative;
     font-size: 13px;
     font-weight: bold;
     margin-left: 37px;
-    color: #CCCBCC;
+    color: inherit;
+    padding-bottom: 3px;
     border-bottom: 3px solid transparent;
 }
 
-.topNavBar nav ul li:hover {
-    border-bottom: 3px solid #D96F6F;
+.topNavBar nav > ul > li:hover:after {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    content: '';
+    height: 3px;
+    width: 100%;
+    background: #D96F6F;
+    animation: slideInLeft .3s;
+}
+
+@keyframes slideInLeft {
+    0% {
+        width: 0px;
+    }
+    100% {
+        width: 100%;
+    }
+
+}
+
+.topNavBar nav ul li > ul {
+    display: none;
+    position: absolute;
+    background: #fff;
+    left: 0px;
+    top: 100%;
+    animation: slideInLeft .1s;
+
+}
+
+.topNavBar nav ul li:hover > ul {
+    display: block;
+    margin-top: 3px;
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12);
+}
+
+.topNavBar nav ul li:hover > ul > li {
+    padding: 5px 10px;
+    white-space: nowrap;
+    color: #3c4451;
+    font-weight: 200;
+    letter-spacing: 4px;
+}
+
+.topNavBar nav ul li:hover > ul > li:first-child {
+    margin-top: 8px;
 }
 
 main {
@@ -298,9 +360,8 @@ body > .describe p {
 
 .works {
     margin-bottom: 200px;
+    margin-top: 100px;
 }
-
-
 
 
 .works nav ul {
@@ -369,3 +430,6 @@ body > .describe p {
 .works .items img {
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
 }
+
+
+
